# muda-app-test

./: CMakeLists.txt  README.md
src/: hello_muda.cu  hello_muda.h  main.cpp
